# DMP_KF

./: .gitignore  README.md  main.m  main.m~  set_matlab_utils_path.m  sim_DMP_EKF.m  sim_DMP_EKF_matlab.m  sim_DMP_PF_matlab.m  sim_DMP_UKF.m  sim_DMP_UKF_matlab.m  simulate_single_DMPM.m  train_DMP.m
c++/dmp_kf/lib/dmp_lib/: CMakeLists.txt  package.xml
c++/dmp_kf/lib/dmp_lib/include/dmp_lib/: DMP_utils.h  dmp_lib.h
c++/dmp_kf/lib/dmp_lib/include/dmp_lib/CanonicalClock/: CanonicalClock.h  LinCanonicalClock.h
c++/dmp_kf/lib/dmp_lib/include/dmp_lib/DMP/: DMP.h  DMP_.h  DMP_CartPos.h  DMP_Shannon.h  DMP_VT.h  DMP_bio.h  DMP_orient.h  DMP_plus.h
c++/dmp_kf/lib/dmp_lib/include/dmp_lib/GatingFunction/: ConstGatingFunction.h  ExpGatingFunction.h  GatingFunction.h  LinGatingFunction.h  SigmoidGatingFunction.h  SpringDamperGatingFunction.h  SpringDamperGatingFunction.m
c++/dmp_kf/lib/dmp_lib/src/: DMP_utils.cpp
c++/dmp_kf/lib/dmp_lib/src/CanonicalClock/: CanonicalClock.cpp  LinCanonicalClock.cpp
c++/dmp_kf/lib/dmp_lib/src/DMP/: DMP.cpp  DMP_.cpp  DMP_CartPos.cpp  DMP_Shannon.cpp  DMP_VT.cpp  DMP_bio.cpp  DMP_orient.cpp  DMP_plus.cpp
c++/dmp_kf/lib/dmp_lib/src/GatingFunction/: ConstGatingFunction.cpp  ExpGatingFunction.cpp  GatingFunction.cpp  LinGatingFunction.cpp  SigmoidGatingFunction.cpp  SpringDamperGatingFunction.cpp
c++/dmp_kf/lib/gmm_lib/: CMakeLists.txt  package.xml
c++/dmp_kf/lib/gmm_lib/include/GMM_lib/GMM_GMR/: GMM_GMR.h
c++/dmp_kf/lib/gmm_lib/src/GMM_GMR/: GMM_GMR.cpp
c++/dmp_kf/lib/opt_lib/: CMakeLists.txt  package.xml
c++/dmp_kf/lib/opt_lib/include/optimization_lib/: LWL.h  LeastSquares.h  optimization_lib.h
c++/dmp_kf/lib/opt_lib/src/: LWL.cpp  LeastSquares.cpp
c++/dmp_kf/lib/plot_lib/: CMakeLists.txt  package.xml
c++/dmp_kf/lib/plot_lib/include/plot_lib/: gnuplot_i.hpp  plot.h  plot_lib.h
c++/dmp_kf/lib/plot_lib/src/: plot.cpp
c++/dmp_kf/lib/robotics_lib/: CMakeLists.txt  package.xml
c++/dmp_kf/lib/robotics_lib/include/robotics_lib/: jlav.h  robotics.h
c++/dmp_kf/lib/robotics_lib/include/robotics_lib/control/: RobotController.h
c++/dmp_kf/lib/robotics_lib/src/: jlav.cpp  robotics.cpp
c++/dmp_kf/lib/robotics_lib/src/control/: RobotController.cpp
c++/dmp_kf/lib/sigproc_lib/: CMakeLists.txt  package.xml
c++/dmp_kf/lib/sigproc_lib/include/sigproc_lib/: movingAverageFilter.h  movingWinMeanFilter.h  sigproc.h  sigproc_lib.h
c++/dmp_kf/lib/sigproc_lib/include/sigproc_lib/sigpack/: sigpack.h
c++/dmp_kf/lib/sigproc_lib/include/sigproc_lib/sigpack/base/: base.h
c++/dmp_kf/lib/sigproc_lib/src/: movingAverageFilter.cpp  movingWinMeanFilter.cpp  sigproc.cpp
c++/dmp_kf/lib/time_lib/: CMakeLists.txt  package.xml
c++/dmp_kf/lib/time_lib/include/time_lib/: time.h  time_lib.h  timer.h
c++/dmp_kf/lib/time_lib/src/: time.cpp  timer.cpp
c++/dmp_kf/robots/bhand/bhand_lib/: CMakeLists.txt  package.xml
c++/dmp_kf/robots/bhand/bhand_lib/config/: freedrive_config.yaml
c++/dmp_kf/robots/bhand/bhand_lib/include/bhand_lib/: BarrettHand.h  BhandFreedriveModel.h  BhandHWInterface.h  BhandUrdfModel.h  parser.h
c++/dmp_kf/robots/bhand/bhand_lib/include/bhand_lib/API/: BHand.h  (+19 more)
c++/dmp_kf/robots/bhand/bhand_lib/manuals/: .~lock.LibraryManual_AD-00.doc#  BH_Control_GUI_Manual.odt  LibraryManual_AD-00.doc
c++/dmp_kf/robots/bhand/bhand_lib/src/: BarrettHand.cpp  BhandFreedriveModel.cpp  BhandHWinterface.cpp  BhandUrdfModel.cpp  parser.cpp
c++/dmp_kf/robots/bhand/bhand_lib/src/source_list/: BHand.cpp  BHandAppHelper.cpp  BHandBH8_262.cpp  BHandBH8_280.cpp  BHandCANDriver.cpp  BHandDriver.cpp  BHandHardware.cpp  BHandSerialDriver.cpp  BHandSupervisoryRealTime.cpp  BPuck2.cpp  BPuck2Manager.cpp  BSerialPort.cpp  PucksInHand.cpp  bhand_misc.cpp  bhand_motors.cpp  bhand_parse.cpp  puck2.cpp
c++/dmp_kf/robots/bhand/bhand_lib/urdf/: bh282_robot.urdf
c++/dmp_kf/robots/robot_sim/: CMakeLists.txt  package.xml
c++/dmp_kf/robots/robot_sim/config/: lwr4p.yaml  ur10.yaml
c++/dmp_kf/robots/robot_sim/include/robot_sim/: utils.h
c++/dmp_kf/robots/robot_sim/launch/: bh282.launch  lwr4p.launch
c++/dmp_kf/robots/robot_sim/rviz/: config.rviz
c++/dmp_kf/robots/robot_sim/src/: utils.cpp
c++/src/ft_sensors/optoforce/optoforce_ros-indigo-devel/: CMakeLists.txt  README.md  package.xml  ros_interface_optoforce.md
c++/src/ft_sensors/optoforce/optoforce_ros-indigo-devel/action/: OptoForce.action
c++/src/ft_sensors/optoforce/optoforce_ros-indigo-devel/cfg/: acquisition_params.yaml
c++/src/ft_sensors/optoforce/optoforce_ros-indigo-devel/launch/: optoforce_action_client_example.launch  optoforce_action_node.launch  optoforce_node.launch
c++/src/ft_sensors/optoforce/optoforce_ros-indigo-devel/src/: optoforce_action_client.cpp  optoforce_action_server.cpp  optoforce_action_server.h  optoforce_node.cpp  optoforce_node.h  optoforce_topic.cpp  optoforce_topic.h
c++/src/ft_sensors/optoforce/optoforce_ros-indigo-devel/test/: README.md  plot_contact.py  rosbag_utilities.py
c++/src/ft_sensors/virtual_ft_sensor/: CMakeLists.txt  package.xml
c++/src/ft_sensors/virtual_ft_sensor/config/: sensor_config.yaml
c++/src/ft_sensors/virtual_ft_sensor/include/virtual_ft_sensor/: virtual_ft_sensor.h
c++/src/ft_sensors/virtual_ft_sensor/include/virtual_ft_sensor/gui/: mainwindow.cpp  mainwindow.h  slider.cpp  slider.h
c++/src/ft_sensors/virtual_ft_sensor/launch/: plot.launch  sensor.launch
c++/src/ft_sensors/virtual_ft_sensor/src/: virtual_ft_sensor.cpp  virtual_ft_sensor_node.cpp
c++/src/lib/kalmanfilter_lib/: CMakeLists.txt  package.xml
c++/src/lib/kalmanfilter_lib/include/kalmanfilter_lib/: EKF.h  KF.h  UKF.h
c++/src/lib/kalmanfilter_lib/src/: EKF.cpp  KF.cpp  UKF.cpp
c++/src/lib/param_lib/: CMakeLists.txt  package.xml
c++/src/lib/param_lib/include/param_lib/: ParamList.h  param_lib.h  parser.h
c++/src/lib/param_lib/src/: parser.cpp
c++/src/robots/ur_robot/ur10/: CMakeLists.txt  package.xml
c++/src/robots/ur_robot/ur10/include/ur10/: Robot.h
c++/src/robots/ur_robot/ur10/rviz/: ur10_cfg.rviz
c++/src/robots/ur_robot/ur10/src/: Robot.cpp
(+263 files in other folders)
