<?xml version="1.0"?>
<package>
  <name>dmp_lib</name>
  <version>0.0.0</version>
  <description>The Dynamic Movement Primitives package</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>optimization_lib</build_depend>
  <run_depend>optimization_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>param_lib</build_depend>
  <run_depend>param_lib</run_depend>

  <build_depend>sigproc_lib</build_depend>
  <run_depend>sigproc_lib</run_depend>

  <build_depend>plot_lib</build_depend>
  <run_depend>plot_lib</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <test_depend>gtest</test_depend>

  <export></export>
</package>
