<?xml version="1.0"?>
<package>
  <name>gmm_lib</name>
  <version>0.0.0</version>
  <description>The Gaussian Mixture Models package</description>

  <maintainer email="antosidi646@gmail.com">slifer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>gtest</test_depend>

  <export></export>
</package>
