<?xml version="1.0"?>
<package>
  <name>plot_lib</name>
  <version>0.0.1</version>
  <description>Time utilities</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>

</package>
