<?xml version="1.0"?>
<package>
  <name>robotics_lib</name>
  <version>0.0.1</version>
  <description>Robotics utilities</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>autharl_core</build_depend>
  <run_depend>autharl_core</run_depend>

  <build_depend>lwr_robot</build_depend>
  <run_depend>lwr_robot</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>time_lib</build_depend>
  <run_depend>time_lib</run_depend>

</package>
