<?xml version="1.0"?>
<package>
  <name>sigproc_lib</name>
  <version>0.0.1</version>
  <description>Signal processing library</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>armadillo</build_depend>
  <run_depend>armadillo</run_depend>
  
</package>
