<?xml version="1.0"?>
<package>
  <name>kalmanfilter_lib</name>
  <version>0.0.1</version>
  <description>Kalman Filter library</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>armadillo</build_depend>

  <run_depend>armadillo</run_depend>

</package>
