<?xml version="1.0"?>
<package>
  <name>bhand_lib</name>
  <version>0.0.0</version>
  <description>The bhand_lib package</description>

  <maintainer email="slifer@todo.todo">slifer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>orocos_kdl</build_depend>
  <run_depend>orocos_kdl</run_depend>

  <export></export>
</package>
