<?xml version="1.0"?>
<package>
  <name>ur10</name>
  <version>0.0.0</version>
  <description>UR10_robot_api</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>tf2_ros</build_depend>
  <run_depend>tf2_ros</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>param_lib</build_depend>
  <run_depend>param_lib</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>ur_kinematics</build_depend>
  <run_depend>ur_kinematics</run_depend>

</package>
